--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Out-Of-Distribution Generalization</h3>
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experiences">
       <div class="my-auto">
-        <h2 class="mb-5">Research Experiences</h2>
+        <h2 class="mb-5">Experiences</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
