--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experiences</a>
+          <a class="nav-link js-scroll-trigger" href="#experiences">Experiences</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
@@ -127,7 +127,7 @@ Out-Of-Distribution Generalization</h3>
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experiences">
       <div class="my-auto">
-        <h2 class="mb-5">Experiences</h2>
+        <h2 class="mb-5">Research Experiences</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
