--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           focusing on image alignment and video impainting.
           I have been exploring the field of AI for a year, during which I have learned a lot about AI and tried some research topics both CV and NLP. I have researched into some low-level tasks in CV such as video impainting and image alignment.
           In NLP, I focus on the Explainable AI and the generalization of pre-trained language models.
-          Recently I'm interested in generative models especially in diffusion model, and I'm looking for a RA position in the area.
+          Recently I'm interested in generative models, and I'm looking for a RA/Intern position in the area.
         <div class="social-icons">
 <!--          <a href="https://www.zhihu.com/people/zhi-zun-bao-63-39-69">-->
 <!--            <i class="fab fa-zhihu"></i>-->
