--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Shuibai Zhang's Personal Homepage.">
   <meta name="author" content="Shuibai Zhang">
   <meta "keywords" content="Shuibai Zhang; 张水柏; shuibai.cheung;Computer Vision; Deep Learning; University of Electronic Science and Technology of China; University of Glasgow; UESTC; University of Westlake">
-  <link rel="author" href="https://albuspeter.github.io/">
+  <link rel="author" href="https://shuiba0.github.io/">
 
   <title>Shuibai Zhang's Personal Homepage</title>
 
