--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">OOD-GLUE: Evaluating Natural Language Understanding Systems for
-Out-Of-Distribution Generalization</h3>
+            <h3 class="mb-0">GLUE-X: Evaluating Natural Language Understanding Models from an Out-of-distribution Generalization Perspective
+</h3>
             <div>Will soon be submitted to ACL Rolling Review</div>
 
           </div>
@@ -129,13 +129,29 @@ Out-Of-Distribution Generalization</h3>
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experiences">
       <div class="my-auto">
         <h2 class="mb-5">Research Experiences</h2>
+	      
+	<div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Research Intern at SUTD STAT NLP lab</h3>
+            <div class="subheading mb-3">Worked with <a href="https://dai.sutd.edu.sg/people/faculty/lu-wei/">Prof. Wei Lu</a></div>
+	    <ul>
+<!-- 	      <li> Researched "". </li> -->
+
+	    </ul>
+            </div>
+            <div class="resume-date text-md-right">
+	      <img src="./img/sutd_logo.png", width="100 px"> <br />
+              2022.06-Present
+            </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Research Intern at Westlake University NLP lab</h3>
             <div class="subheading mb-3">Worked with <a href="https://frcchang.github.io/">Prof. Yue Zhang</a></div>
 	    <ul>
-	      <li> Researched "OOD-GLUE: Evaluating Natural Language Understanding Systems for Out-Of-Distribution Generalization". </li>
+	      <li> Researched "GLUE-X: Evaluating Natural Language Understanding Models from an Out-of-distribution Generalization Perspective
+". </li>
 
 	    </ul>
             </div>
