--- a/index.html
+++ b/index.html
@@ -108,21 +108,18 @@
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="publications">
-      <div class="w-100">
+    <div class="w-100">
         <h2 class="mb-5">Publications</h2>
-
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">GLUE-X: Evaluating Natural Language Understanding Models from an Out-of-distribution Generalization Perspective
-</h3>
-            <div>Will soon be submitted to ACL Rolling Review</div>
-
-          </div>
-
+            <div class="resume-content mr-auto">
+                <h3 class="mb-0"><a href="https://arxiv.org/abs/2211.08073" target="_blank">GLUE-X: Evaluating Natural Language Understanding Models from an Out-of-distribution Generalization Perspective</a></h3>
+                <div>Under review</div>
+            </div>
         </div>
-      </div>
+    </div>
+</section>
 
-    </section>
+</section>
 
     <hr class="m-0">
 
@@ -141,7 +138,7 @@
             </div>
             <div class="resume-date text-md-right">
 	      <img src="./img/sutd_logo.png", width="100 px"> <br />
-              2022.06-Present
+              2023.03-Present
             </div>
         </div>
 
@@ -157,7 +154,7 @@
             </div>
             <div class="resume-date text-md-right">
 	      <img src="./img/westlake_logo.png", width="100 px"> <br />
-              2022.06-Present
+              2022.06-2023.02
             </div>
         </div>
 
