--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
           </a>
         </div>
         <div>
-          <h3 class="mb-0" style="margin-top:10px">News</h3>
-          <ul style="line-height:14px">
-          <li><strong>[Oct. 2022]</strong> I published a tutorial about Denoising Diffusion Probabilistic Models(DDPM) on <a href="https://zhuanlan.zhihu.com/p/569994589?"> zhihu</a> , fell free to discuss with me if you are interested.</li>
-          <br><li><strong>[Oct. 2022]</strong> I started my personal website !</li>
-          </ul>
-        </div>
+    <h3 class="mb-0" style="margin-top:10px">News</h3>
+    <ul style="line-height:14px">
+        <li><strong>[Nov. 15, 2022]</strong> We have uploaded our work about OOD generalization on <a href="https://arxiv.org/abs/2211.08073" target="_blank">arxiv</a>. Feel free to discuss with me if you are interested.</li>
+        <br><li><strong>[Oct. 2022]</strong> I published a tutorial about Denoising Diffusion Probabilistic Models (DDPM) on <a href="https://zhuanlan.zhihu.com/p/569994589?">zhihu</a>. Feel free to discuss with me if you are interested.</li>
+        <br><li><strong>[Oct. 2022]</strong> I started my personal website!</li>
+    </ul>
+</div>
       </div>
     </section>
 
