--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
         <div class="subheading mb-5">
           shuibai.cheung@google.com
         </div>
-        <p class="lead mb-5"> I am a final-year student in a joint program at the <a href="https://www.gla.ac.uk/">University of Glasgow</a> and <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a>
-          majoring in Electronic Information Engineering, and a research intern at <a href="https://twitter.com/nlpwestlake">Westlake NLP lab</a> in <a href="https://www.westlake.edu.cn/">Westlake University</a>, advised by <a href="https://frcchang.github.io/">Prof. Yue Zhang</a> .
-          Before coming there, I was advised by Prof. Shuyuan Zhu (UESTC),
-          focusing on image alignment and video impainting.
-          I have been exploring the field of AI for a year, during which I have learned a lot about AI and tried some research topics both CV and NLP. I have researched into some low-level tasks in CV such as video impainting and image alignment.
-          In NLP, I focus on the Explainable AI and the generalization of pre-trained language models.
-          Recently I'm interested in generative models, and I'm looking for a RA/Intern position in the area.
-        <div class="social-icons">
+        <p class="lead mb-5">I am a final-year student in a joint program at the <a href="https://www.gla.ac.uk/">University of Glasgow</a> and <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a> majoring in Electronic Information Engineering. I am currently a research intern at <a href="https://statnlp-research.github.io/">STAT NLP Lab</a> in <a href="https://www.sutd.edu.sg/">Singapore University of Technology and Design</a>, advised by <a href="https://dai.sutd.edu.sg/people/faculty/lu-wei/">Prof. Lu Wei</a>. Before coming here, I was advised by Prof. Shuyuan Zhu (UESTC) on image alignment and video inpainting, and I interned at <a href="https://twitter.com/nlpwestlake">Westlake NLP lab</a> in <a href="https://www.westlake.edu.cn/">Westlake University</a>, advised by <a href="https://frcchang.github.io/">Prof. Yue Zhang</a>.
+I have been exploring the field of AI for a year, during which I have learned a lot about AI and tried some research topics in both CV and NLP. I have researched into some low-level tasks in CV such as video inpainting and image alignment. In NLP, I focus on the Explainable AI and the generalization of pre-trained language models. Recently I'm interested in researches regards to LLMs, and I'm looking for an phd position in the area.
+</p>
+<div class="social-icons"></div>
+
+
+
+
 <!--          <a href="https://www.zhihu.com/people/zhi-zun-bao-63-39-69">-->
 <!--            <i class="fab fa-zhihu"></i>-->
           </a>
