--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ I have been exploring the field of AI for a year, during which I have learned a 
 		
     <h3 class="mb-0" style="margin-top:10px">News</h3>
     <ul style="line-height:14px">
-	<li><strong>[May.2, 2023]</strong> Our work <a href="https://arxiv.org/abs/2211.08073" target="_blank">GLUE-X: Evaluating Natural Language Understanding Models from an Out-of-distribution Generalization Perspective</a>. has been accepted to the ACL findings 2023!</li>
+	<li><strong>[May.2, 2023]</strong> Our work <a href="https://arxiv.org/abs/2211.08073" target="_blank">GLUE-X: Evaluating Natural Language Understanding Models from an Out-of-distribution Generalization Perspective</a>. has been accepted to ACL findings 2023!</li>
         <br><li><strong>[Nov. 15, 2022]</strong> We have uploaded our work about OOD generalization on <a href="https://arxiv.org/abs/2211.08073" target="_blank">arxiv</a>.</li>
         <br><li><strong>[Oct. 2022]</strong> I uploaded a tutorial about Denoising Diffusion Probabilistic Models (DDPM) on <a href="https://zhuanlan.zhihu.com/p/569994589?">zhihu</a>. Feel free to discuss with me if you are interested.</li>
         <br><li><strong>[Oct. 2022]</strong> I started my personal website!</li>
