--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 I have been exploring the field of AI for a year, during which I have learned a lot about AI and tried some research topics in both CV and NLP. I have researched into some low-level tasks in CV such as video inpainting and image alignment. In NLP, I focus on the Out of Distribution(OOD) generalization of pre-trained language models. Recently I'm interested in researches regards to LLMs, especilly in the fields of Model Editing, In Context Learning, and Knowledge Injection, and I'm looking for an phd position in the area of NLP.
 </p>
 <div class="social-icons">
-          <a href="https://github.com/shuiba0">
+<!--           <a href="https://github.com/shuiba0">
             <i class="fab fa-github"></i>
-          </a>
+          </a> -->
           <a href="https://scholar.google.com/citations?hl=zh-CN&user=cOGgwdIAAAAJ">
             <i class="fab fa-google"></i>
           </a>
