--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ I have been exploring the field of AI for a year, during which I have learned a 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Research Intern at Westlake University NLP lab</h3>
-            <div class="subheading mb-3">Worked with <a href="https://frcchang.github.io/">Prof. Yue Zhang</a></div>
+            <div class="subheading mb-3">Worked with <a href="https://frcchang.github.io/">Prof. Yue Zhang</a> and <a href="https://yanglinyi.github.io/">Dr. Linyi Yang</a></div>
 	    <ul>
 	      <li> Researched "GLUE-X: Evaluating Natural Language Understanding Models from an Out-of-distribution Generalization Perspective
 ". </li>
