--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ I have been conducting researches on Out-Of-Distribution (OOD) problems for pret
         <h2 class="mb-5">Publications</h2>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-                <h3 class="mb-0"><a href="https://arxiv.org/abs/2211.08073" target="_blank">GLUE-X: Evaluating Natural Language Understanding Models from an Out-of-distribution Generalization Perspective</a></h3>
+                <h3 class="mb-0"><a href="https://aclanthology.org/2023.findings-acl.806.pdf" target="_blank">GLUE-X: Evaluating Natural Language Understanding Models from an Out-of-distribution Generalization Perspective</a></h3>
                 <div>ACL findings 2023</div>
             </div>
         </div>
