--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@ I have been conducting researches on Out-Of-Distribution (OOD) problems for pret
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="publications">
     <div class="w-100">
         <h2 class="mb-5">Publications</h2>
+	<div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+                <h3 class="mb-0">Supervised Knowledge Makes Large Language Models Better In-Context Learners</a></h3>
+                <div>ICLR 2023 Under Review</div>
+            </div>
+        </div>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
                 <h3 class="mb-0"><a href="https://aclanthology.org/2023.findings-acl.806.pdf" target="_blank">GLUE-X: Evaluating Natural Language Understanding Models from an Out-of-distribution Generalization Perspective</a></h3>
