--- a/index.html
+++ b/index.html
@@ -166,6 +166,21 @@ I have been conducting researches on Out-Of-Distribution (OOD) problems for pret
             </div>
         </div>
 
+	<div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Final Year Project of Univeristy of Glasgow</h3>
+            <div class="subheading mb-3">Worked with <a href="https://www.gla.ac.uk/schools/engineering/staff/boliu/">Prof. Bo Liu</a></div>
+	    <ul>
+<!-- 	      <li> Researched "Predicting Time Series Data Using Deep Learning". </li> -->
+
+	    </ul>
+            </div>
+            <div class="resume-date text-md-right">
+	      <img src="./img/sutd_logo.png", width="100 px"> <br />
+              2022.09-2023.05
+            </div>
+        </div>
+
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Research Intern at Westlake University NLP lab</h3>
