--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ I have been conducting researches on Out-Of-Distribution (OOD) problems for pret
             </div>
             <div class="resume-date text-md-right">
 	      <img src="./img/sutd_logo.png", width="100 px"> <br />
-              2023.03-Present
+              2023.03-2023.06
             </div>
         </div>
 
@@ -176,7 +176,7 @@ I have been conducting researches on Out-Of-Distribution (OOD) problems for pret
 	    </ul>
             </div>
             <div class="resume-date text-md-right">
-	      <img src="./img/sutd_logo.png", width="100 px"> <br />
+	      <img src="./img/UoG.png", width="100 px"> <br />
               2022.09-2023.05
             </div>
         </div>
