--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
           <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experiences">Experiences</a>
+          <a class="nav-link js-scroll-trigger" href="#work_experiences">Work Experiences</a>
+        </li>
+	<li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#research_experiences">Research Experiences</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
@@ -145,7 +148,7 @@ I have been conducting researches on Out-Of-Distribution (OOD) problems for pret
 
 </section>
 	    <hr class="m-0">
-	<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experiences">
+	<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="work_experiences">
 	<div class="my-auto">
 	        <h2 class="mb-5">Work Experiences</h2>
 		<div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -167,7 +170,7 @@ I have been conducting researches on Out-Of-Distribution (OOD) problems for pret
 
 	
 
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experiences">
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="research_experiences">
       <div class="my-auto">
         <h2 class="mb-5">Research Experiences</h2>
 	      
