--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
           <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#work_experiences">Work Experiences</a>
+          <a class="nav-link js-scroll-trigger" href="#work_experiences">Work</a>
         </li>
 	<li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#research_experiences">Research Experiences</a>
+          <a class="nav-link js-scroll-trigger" href="#research_experiences">Research</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
@@ -147,98 +147,98 @@ I have been conducting researches on Out-Of-Distribution (OOD) problems for pret
 </section>
 
 </section>
-	    <hr class="m-0">
-	<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="work_experiences">
-	<div class="my-auto">
-	        <h2 class="mb-5">Work Experiences</h2>
-		<div class="resume-item d-flex flex-column flex-md-row mb-5">
-	          <div class="resume-content mr-auto">
-	            <h3 class="mb-0">Research Assistant at Westlake NLP lab</h3>
-	            <div class="subheading mb-3">Worked with Worked with <a href="https://frcchang.github.io/">Prof. Yue Zhang</a></div>
-		    <ul>
-	<!-- 	      <li> Researched "". </li> -->
-	
-		    </ul>
-	            </div>
-	            <div class="resume-date text-md-right">
-		      <img src="./img/westlake_logo.png", width="100 px"> <br />
-	              2023.07-Present
-	            </div>
-	        </div>
-	
-	    <hr class="m-0">
-
-	
-
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="research_experiences">
-      <div class="my-auto">
-        <h2 class="mb-5">Research Experiences</h2>
-	      
+    <hr class="m-0">
+<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="work_experiences">
+<div class="my-auto">
+	<h2 class="mb-5">Work Experiences</h2>
 	<div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Research Intern at SUTD STAT NLP lab</h3>
-            <div class="subheading mb-3">Worked with <a href="https://dai.sutd.edu.sg/people/faculty/lu-wei/">Prof. Wei Lu</a></div>
+	  <div class="resume-content mr-auto">
+	    <h3 class="mb-0">Research Assistant at Westlake NLP lab</h3>
+	    <div class="subheading mb-3">Worked with Worked with <a href="https://frcchang.github.io/">Prof. Yue Zhang</a></div>
 	    <ul>
 <!-- 	      <li> Researched "". </li> -->
 
 	    </ul>
-            </div>
-            <div class="resume-date text-md-right">
-	      <img src="./img/sutd_logo.png", width="100 px"> <br />
-              2023.03-2023.06
-            </div>
-        </div>
+	    </div>
+	    <div class="resume-date text-md-right">
+	      <img src="./img/westlake_logo.png", width="100 px"> <br />
+	      2023.07-Present
+	    </div>
+	</div>
 
-	<div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Final Year Project of Univeristy of Glasgow</h3>
-            <div class="subheading mb-3">Worked with <a href="https://www.gla.ac.uk/schools/engineering/staff/boliu/">Prof. Bo Liu</a></div>
-	    <ul>
+    <hr class="m-0">
+
+	
+
+<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="research_experiences">
+<div class="my-auto">
+<h2 class="mb-5">Research Experiences</h2>
+      
+<div class="resume-item d-flex flex-column flex-md-row mb-5">
+  <div class="resume-content mr-auto">
+    <h3 class="mb-0">Research Intern at SUTD STAT NLP lab</h3>
+    <div class="subheading mb-3">Worked with <a href="https://dai.sutd.edu.sg/people/faculty/lu-wei/">Prof. Wei Lu</a></div>
+    <ul>
+<!-- 	      <li> Researched "". </li> -->
+
+    </ul>
+    </div>
+    <div class="resume-date text-md-right">
+      <img src="./img/sutd_logo.png", width="100 px"> <br />
+      2023.03-2023.06
+    </div>
+</div>
+
+<div class="resume-item d-flex flex-column flex-md-row mb-5">
+  <div class="resume-content mr-auto">
+    <h3 class="mb-0">Final Year Project of Univeristy of Glasgow</h3>
+    <div class="subheading mb-3">Worked with <a href="https://www.gla.ac.uk/schools/engineering/staff/boliu/">Prof. Bo Liu</a></div>
+    <ul>
 <!-- 	      <li> Researched "Predicting Time Series Data Using Deep Learning". </li> -->
 
-	    </ul>
-            </div>
-            <div class="resume-date text-md-right">
-	      <img src="./img/UoG.jpg", width="100 px"> <br />
-              2022.09-2023.05
-            </div>
-        </div>
+    </ul>
+    </div>
+    <div class="resume-date text-md-right">
+      <img src="./img/UoG.jpg", width="100 px"> <br />
+      2022.09-2023.05
+    </div>
+</div>
 
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Research Intern at Westlake University NLP lab</h3>
-            <div class="subheading mb-3">Worked with <a href="https://frcchang.github.io/">Prof. Yue Zhang</a> and <a href="https://yanglinyi.github.io/">Dr. Linyi Yang</a></div>
-	    <ul>
-	      <li> Researched "GLUE-X: Evaluating Natural Language Understanding Models from an Out-of-distribution Generalization Perspective
+<div class="resume-item d-flex flex-column flex-md-row mb-5">
+  <div class="resume-content mr-auto">
+    <h3 class="mb-0">Research Intern at Westlake University NLP lab</h3>
+    <div class="subheading mb-3">Worked with <a href="https://frcchang.github.io/">Prof. Yue Zhang</a> and <a href="https://yanglinyi.github.io/">Dr. Linyi Yang</a></div>
+    <ul>
+      <li> Researched "GLUE-X: Evaluating Natural Language Understanding Models from an Out-of-distribution Generalization Perspective
 ". </li>
 
-	    </ul>
-            </div>
-            <div class="resume-date text-md-right">
-	      <img src="./img/westlake_logo.png", width="100 px"> <br />
-              2022.06-2023.02
-            </div>
-        </div>
+    </ul>
+    </div>
+    <div class="resume-date text-md-right">
+      <img src="./img/westlake_logo.png", width="100 px"> <br />
+      2022.06-2023.02
+    </div>
+</div>
 
 
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Research Intern at University of Electronic Science and Technology of China</h3>
-            <div class="subheading mb-3">Worked with Prof. Shuyuan Zhu.</div>
-	    <ul>
-	      <li> Researched "Image Alignment Based on Multi-Homography". </li>
-	      <li> Researched "Video Impainting Guided by Flow and Depth". </li>
-	    </ul>
-            </div>
-            <div class="resume-date text-md-right">
-	      <img src="./img/UESTC.png", width="100 px"> <br />
-              2021.09-2022.04
-            </div>
-        </div>
+<div class="resume-item d-flex flex-column flex-md-row mb-5">
+  <div class="resume-content mr-auto">
+    <h3 class="mb-0">Research Intern at University of Electronic Science and Technology of China</h3>
+    <div class="subheading mb-3">Worked with Prof. Shuyuan Zhu.</div>
+    <ul>
+      <li> Researched "Image Alignment Based on Multi-Homography". </li>
+      <li> Researched "Video Impainting Guided by Flow and Depth". </li>
+    </ul>
+    </div>
+    <div class="resume-date text-md-right">
+      <img src="./img/UESTC.png", width="100 px"> <br />
+      2021.09-2022.04
+    </div>
+</div>
 
 
-      </div>
-    </section>
+</div>
+</section>
 
     <hr class="m-0">
 
