--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@ I have been conducting researches on Out-Of-Distribution (OOD) problems for pret
 	</div>
 
     <hr class="m-0">
+</section>
 
 	
 
