--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@ I have been conducting researches on Out-Of-Distribution (OOD) problems for pret
     </div>
 </section>
 
-</section>
-    <hr class="m-0">
+<hr class="m-0">
 <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="work_experiences">
 <div class="my-auto">
 	<h2 class="mb-5">Work Experiences</h2>
@@ -167,6 +166,7 @@ I have been conducting researches on Out-Of-Distribution (OOD) problems for pret
 	</div>
 
     <hr class="m-0">
+</div>
 </section>
 
 	
