--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ I have been conducting researches on Out-Of-Distribution (OOD) problems for pret
 	<div class="resume-item d-flex flex-column flex-md-row mb-5">
 	  <div class="resume-content mr-auto">
 	    <h3 class="mb-0">Research Assistant at Westlake NLP lab</h3>
-	    <div class="subheading mb-3">Worked with Worked with <a href="https://frcchang.github.io/">Prof. Yue Zhang</a></div>
+	    <div class="subheading mb-3">Work with <a href="https://frcchang.github.io/">Prof. Yue Zhang</a></div>
 	    <ul>
 <!-- 	      <li> Researched "". </li> -->
 
@@ -180,7 +180,7 @@ I have been conducting researches on Out-Of-Distribution (OOD) problems for pret
     <h3 class="mb-0">Research Intern at SUTD STAT NLP lab</h3>
     <div class="subheading mb-3">Worked with <a href="https://dai.sutd.edu.sg/people/faculty/lu-wei/">Prof. Wei Lu</a></div>
     <ul>
-<!-- 	      <li> Researched "". </li> -->
+	      <li> Researched "Conditional Text Generation via Hypernetworks". </li>
 
     </ul>
     </div>
@@ -195,7 +195,7 @@ I have been conducting researches on Out-Of-Distribution (OOD) problems for pret
     <h3 class="mb-0">Final Year Project of Univeristy of Glasgow</h3>
     <div class="subheading mb-3">Worked with <a href="https://www.gla.ac.uk/schools/engineering/staff/boliu/">Prof. Bo Liu</a></div>
     <ul>
-<!-- 	      <li> Researched "Predicting Time Series Data Using Deep Learning". </li> -->
+	      <li> Researched "Predicting Time Series Data Using Deep Learning". </li>
 
     </ul>
     </div>
