--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@ I have been conducting researches on Out-Of-Distribution (OOD) problems for pret
         <h2 class="mb-5">Publications</h2>
 	<div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-                <h3 class="mb-0">Supervised Knowledge Makes Large Language Models Better In-Context Learners</a></h3>
+<!--                 <h3 class="mb-0">Supervised Knowledge Makes Large Language Models Better In-Context Learners</a></h3> -->
+		<h3 class="mb-0">Confidential</a></h3>
                 <div>ICLR 2024 Under Review</div>
             </div>
         </div>
